# MLOps-Workshop

./: .gitignore  COMANDOS.sh  LICENSE  README.md
submissions/dog_vs_cat/JesusPenaSiguas/: Dockerfile
submissions/dog_vs_cat/alexanderchavez/: Dockerfile  README_CatsDogs_Inference.md  environment.yml
submissions/dog_vs_cat/fertueros/: Dockerfile  environment.yml
submissions/dog_vs_cat/kevin-gomez/: Dockerfile  environment.yml
submissions/heart_failure_prediction/JesusPenaSiguas/: Dockerfile
submissions/heart_failure_prediction/JhampierTapia/: Dockerfile  requeriments.txt
submissions/heart_failure_prediction/alexanderchavez/: environment.yml
submissions/heart_failure_prediction/kevin-gomez/: Dockerfile  environment.yml
submissions/heart_failure_prediction/marcovela/: pyproject.toml
submissions/heart_failure_prediction/marcovela/notebooks/: main.ipynb
submissions/heart_failure_prediction/marcovela/src/: docs.py  train.py
submissions/mnist_classification/JhampierTapia/: Dockerfile
submissions/mnist_classification/alexanderchavez/: .dockerignore  environment.yml
submissions/mnist_classification/fertueros/: environment.yml
submissions/mnist_classification/jhampierTapia/: Dockerfile
submissions/mnist_classification/juan_espejo/: environment.yml  environment_1.yml
submissions/mnist_classification/kevin-gomez/: dockerfile  environment.yml
submissions/mnist_classification/marcovela/: Dockerfile
submissions/text_classification/JhampierTapia/: .gitignore  Dockerfile
submissions/text_classification/josefernandez/: Dockerfile  environment.yml
(+40 files in other folders)
