[project]
name = "heart-failure-prediction"
version = "0.1.0"
description = ""
authors = [
    {name = "characat0",email = "36453977+characat0@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.1,<3.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyterlab (>=4.4.9,<5.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "xgboost (>=3.0.5,<4.0.0)",
    "cloudpickle (>=3.1.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
